@@ -6,3 +6,22 @@
 #include <openssl/ssl.h>
 #include <openssl/err.h>
 
+#include <openssl/asn1.h>
+
+static const char* FILE_NAME = "Net/SSLeay/ASN1_OBJECT.c";
+
+int32_t SPVM__Net__SSLeay__ASN1_OBJECT__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  ASN1_OBJECT* pointer = env->get_pointer(env, stack, obj_self);
+  
+  if (!env->no_free(env, stack, obj_self)) {
+    ASN1_OBJECT_free(pointer);
+  }
+  
+  return 0;
+}
+
